all routes I think work, added route for favRecipe
